[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/Menu/Play Button.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Menu/Menu_Control.gd" type="Script" id=2]
[ext_resource path="res://assets/fount/Menu.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/fount/Menus.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/Sounds/Music/Music/Menu Music.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/Menu/menu.png" type="Texture" id=6]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 23.712, 8.0549 )

[sub_resource type="DynamicFontData" id=5]
antialiased = false
font_path = "res://assets/fount/joystix monospace.otf"

[sub_resource type="DynamicFont" id=6]
size = 8
font_data = SubResource( 5 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
focus_neighbour_left = NodePath("PlayButton/Label")
focus_neighbour_top = NodePath("PlayButton2/Label")
focus_neighbour_right = NodePath("PlayButton3/Label")
mouse_filter = 2

[node name="PlayButton" type="Sprite" parent="AspectRatioContainer"]
position = Vector2( 566.375, 268.375 )
scale = Vector2( 6.19922, 6.54687 )
texture = ExtResource( 1 )
vframes = 4
frame = 1

[node name="Label" type="Label" parent="AspectRatioContainer/PlayButton"]
margin_left = -30.0
margin_top = -6.0
margin_right = 14.0
margin_bottom = 6.0
custom_fonts/font = ExtResource( 3 )
text = "Play"
align = 1
valign = 1

[node name="Btn_Play" type="Area2D" parent="AspectRatioContainer/PlayButton"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AspectRatioContainer/PlayButton/Btn_Play"]
position = Vector2( -7.9641, -0.169453 )
shape = SubResource( 4 )

[node name="PlayButton2" type="Sprite" parent="AspectRatioContainer"]
visible = false
position = Vector2( 566.375, 396.375 )
scale = Vector2( 6.19922, 6.54687 )
texture = ExtResource( 1 )
vframes = 4
frame = 1

[node name="Label" type="Label" parent="AspectRatioContainer/PlayButton2"]
margin_left = -30.0
margin_top = -6.0
margin_right = 14.0
margin_bottom = 6.0
custom_fonts/font = SubResource( 6 )
text = "Option"
align = 1
valign = 1

[node name="Btn_Menu" type="Area2D" parent="AspectRatioContainer/PlayButton2"]

[node name="confg" type="CollisionShape2D" parent="AspectRatioContainer/PlayButton2/Btn_Menu"]
position = Vector2( -7.9641, -0.169453 )
shape = SubResource( 4 )

[node name="PlayButton3" type="Sprite" parent="AspectRatioContainer"]
position = Vector2( 566.375, 524.375 )
scale = Vector2( 6.19922, 6.54687 )
texture = ExtResource( 1 )
vframes = 4
frame = 1

[node name="Label" type="Label" parent="AspectRatioContainer/PlayButton3"]
margin_left = -30.0
margin_top = -6.0
margin_right = 14.0
margin_bottom = 6.0
custom_fonts/font = ExtResource( 3 )
text = "Quit"
align = 1
valign = 1

[node name="Btn_Quit" type="Area2D" parent="AspectRatioContainer/PlayButton3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AspectRatioContainer/PlayButton3/Btn_Quit"]
position = Vector2( -7.9641, -0.169449 )
shape = SubResource( 4 )

[node name="Label" type="Label" parent="."]
margin_top = 12.0
margin_right = 1024.0
margin_bottom = 180.0
custom_fonts/font = ExtResource( 4 )
text = "Under the Horizon"
align = 1
valign = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = 15.0
autoplay = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 514.56, 297.5 )
scale = Vector2( 2.01667, 2.01667 )
z_index = -10
texture = ExtResource( 6 )

[connection signal="mouse_entered" from="AspectRatioContainer/PlayButton/Btn_Play" to="." method="_on_Btn_Play_mouse_entered"]
[connection signal="mouse_exited" from="AspectRatioContainer/PlayButton/Btn_Play" to="." method="_on_Btn_Play_mouse_exited"]
[connection signal="mouse_entered" from="AspectRatioContainer/PlayButton3/Btn_Quit" to="." method="_on_Btn_Quit_mouse_entered"]
[connection signal="mouse_exited" from="AspectRatioContainer/PlayButton3/Btn_Quit" to="." method="_on_Btn_Quit_mouse_exited"]
